# Todobot_ai_agent

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py  schemas.py
app/core/: agent.py  database.py
app/crud/: conversations.py  todos.py  users.py
app/models/: database.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
