[project]
name = "todo-agent"
version = "0.1.0"
git commit -m "Added environment configuration with Gemini API key"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
